Bölüm 02: Değişkenler Ödevleri

--- a/Python_101__mustafayildirim.ipynb
+++ b/Python_101__mustafayildirim.ipynb
@@ -283,7 +283,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lmrymxeNjAR5"
+        "id": "lmrymxeNjAR5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f1200e4-db0b-489c-eb98-42a1e594a1b7"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -292,8 +296,17 @@
         "print(\"a = \" + str(a))\n",
         "print(\"b = \" + str(b))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a = 2\n",
+            "b = 2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -313,7 +326,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4iU4Hw7wjNzk"
+        "id": "4iU4Hw7wjNzk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0bf1cbf2-13d9-4052-f6b0-f770e81b19ea"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -321,8 +338,16 @@
         "adSoyad = \"Orçun Madran\"\n",
         "print(\"Adı Soyadı: \" + adSoyad)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Adı Soyadı: Orçun Madran\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -391,14 +416,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1W14OfkxeGuN"
+        "id": "1W14OfkxeGuN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c1957ee3-0fac-4ddb-9021-8087c8c60c3c"
       },
       "source": [
         "degisken1 = \"Veri\"\n",
-        "print(degisken2)"
+        "print(degisken1)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Veri\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -412,14 +449,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JrNUlQAyeqHQ"
+        "id": "JrNUlQAyeqHQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e14013c1-bbd6-4bd8-9bbe-5e09e457fff2"
       },
       "source": [
         "degisken3 = 'Yeni veri'\n",
-        "print()"
+        "print(degisken3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yeni veri\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -453,19 +502,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Vzg4x_inkN9h"
+        "id": "Vzg4x_inkN9h",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "24cea0db-5b49-4ea4-c865-65ffd7e723ae"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
         "\n",
         "tamSayi = 5\n",
         "print(type(tamSayi))\n",
-        "\n",
         "ondalikSayi = 7.4\n",
-        "print(type(ondalikSayi)"
+        "print(type(ondalikSayi))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -485,8 +546,32 @@
       "source": [
         "sayi = 9.0\n"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sayi = 9.0\n",
+        "print(type(ondalikSayi))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E--WVJyPLImE",
+        "outputId": "69eef1eb-f21d-47c4-e3c2-86c690c8aea1"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -529,7 +614,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G0bwb2rBkgVN"
+        "id": "G0bwb2rBkgVN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d4eb309c-630d-4fb0-c50f-1c2ee45850d2"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -550,8 +639,23 @@
         "print(type(sayi))\n",
         "print(sayi)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'float'>\n",
+            "6.5\n",
+            "<class 'int'>\n",
+            "6\n",
+            "<class 'float'>\n",
+            "6.0\n",
+            "<class 'str'>\n",
+            "6.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -572,6 +676,33 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sayi = 3.14\n",
+        "sayi = int(sayi)\n",
+        "print(type(sayi))\n",
+        "print(sayi)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jNgzW6BnMXPN",
+        "outputId": "c5394d80-5a80-49bc-9f91-91762f33faf7"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -633,7 +764,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f2f9cc15-6342-4ccd-87e4-69a8fb719381"
+        "outputId": "8c867255-79eb-4bed-f8e8-5a6d403fc198"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -668,7 +799,7 @@
         "sonuc = sayi % 4\n",
         "print(sonuc)"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -705,8 +836,37 @@
         "urunAdet = 3\n",
         "pesinAdetIndirimTL = 500"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "urunAdi = \"Bisiklet\"\n",
+        "urunBedeliAvro = 850\n",
+        "pariteAvroTL = 7\n",
+        "urunAdet = 3\n",
+        "pesinAdetIndirimTL = 500\n",
+        "urunbedeliTL = (urunBedeliAvro * pariteAvroTL * urunAdet) - (pesinAdetIndirimTL * urunAdet)\n",
+        "print (\"urunAdi:\" + (str)(urunbedeliTL))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3n2iGTT1NDH5",
+        "outputId": "198988d6-a7bf-4a26-dd10-6603b92c3bf5"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "urunAdi:16350\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -744,7 +904,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da1548bf-287d-4a87-e614-846d4d3f354a"
+        "outputId": "791b9549-8106-40bf-b60a-4ae7bac75621"
       },
       "source": [
         "# Örnek uygulama çalıştır\n",
@@ -756,7 +916,7 @@
         "sayi -= 6\n",
         "print(\"Sayı = \" + str(sayi))"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,6 +947,34 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sayi = 55\n",
+        "sayi += 20\n",
+        "print(sayi)\n",
+        "sayi -= 10\n",
+        "print(\"Sayı = \" + str(sayi))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gGeSFx6QPOHo",
+        "outputId": "7141d291-a02f-41ba-c480-65a92b7a4f24"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "75\n",
+            "Sayı = 65\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
