--- a/Python_101__mustafayildirim.ipynb
+++ b/Python_101__mustafayildirim.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -296,7 +297,7 @@
         "print(\"a = \" + str(a))\n",
         "print(\"b = \" + str(b))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +339,7 @@
         "adSoyad = \"Orçun Madran\"\n",
         "print(\"Adı Soyadı: \" + adSoyad)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -426,7 +427,7 @@
         "degisken1 = \"Veri\"\n",
         "print(degisken1)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +460,7 @@
         "degisken3 = 'Yeni veri'\n",
         "print(degisken3)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -516,7 +517,7 @@
         "ondalikSayi = 7.4\n",
         "print(type(ondalikSayi))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -546,7 +547,7 @@
       "source": [
         "sayi = 9.0\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -562,7 +563,7 @@
         "id": "E--WVJyPLImE",
         "outputId": "69eef1eb-f21d-47c4-e3c2-86c690c8aea1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -639,7 +640,7 @@
         "print(type(sayi))\n",
         "print(sayi)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +693,7 @@
         "id": "jNgzW6BnMXPN",
         "outputId": "c5394d80-5a80-49bc-9f91-91762f33faf7"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -799,7 +800,7 @@
         "sonuc = sayi % 4\n",
         "print(sonuc)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -836,7 +837,7 @@
         "urunAdet = 3\n",
         "pesinAdetIndirimTL = 500"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -857,7 +858,7 @@
         "id": "3n2iGTT1NDH5",
         "outputId": "198988d6-a7bf-4a26-dd10-6603b92c3bf5"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -916,7 +917,7 @@
         "sayi -= 6\n",
         "print(\"Sayı = \" + str(sayi))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -964,7 +965,7 @@
         "id": "gGeSFx6QPOHo",
         "outputId": "7141d291-a02f-41ba-c480-65a92b7a4f24"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1446,7 +1447,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UDTKDiPeNh_a"
+        "id": "UDTKDiPeNh_a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0fac57cb-ec17-4424-8b67-d733ae8eebba"
       },
       "source": [
         "# Örnek uygulama çalıştır\n",
@@ -1458,8 +1463,17 @@
         "metin = \"Python Programlama Dili\"\n",
         "print(metin[7:])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python\n",
+            "Programlama Dili\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1523,13 +1537,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2CpxVwHMTENL"
+        "id": "2CpxVwHMTENL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "03b33469-901c-4ac7-f43b-66d22e0565c7"
       },
       "source": [
-        "metin = \"Python Programlama Dili\"\n"
+        "metin = \"Python Programlama Dili\"\n",
+        "print(\"Python\" in metin)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1664,14 +1691,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A8Gpec2uVhxU"
+        "id": "A8Gpec2uVhxU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a671bff-08db-49cc-ebb8-4938ce444479"
       },
       "source": [
-        "metin = 'Bilimsel çalışmalarda \"Python\" kullanımı Türkiye'de çok yaygınlaştı!'\n",
+        "metin = 'Bilimsel çalışmalarda \"Python\" kullanımı Türkiye\\'de çok yaygınlaştı!'\n",
         "print(metin)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bilimsel çalışmalarda \"Python\" kullanımı Türkiye'de çok yaygınlaştı!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1709,7 +1748,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x6OiDHydSKra"
+        "id": "x6OiDHydSKra",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "044cbe16-59ed-4848-f38f-02994857ebb8"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -1719,8 +1762,18 @@
         "print(metin.upper())\n",
         "print(metin.capitalize())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "python programlama dili\n",
+            "PYTHON PROGRAMLAMA DILI\n",
+            "Python programlama dili\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1734,16 +1787,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XfaN4psBV8wr"
+        "id": "XfaN4psBV8wr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fadf943e-aa82-487f-950e-45483599390e"
       },
       "source": [
         "anahtarKelime = \"Makine Öğrenmesi\"\n",
         "arananKelime = \"makine öğrenmesi\"\n",
-        "\n",
         "print(anahtarKelime == arananKelime) # Çıktı: True"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "anahtarKelime = \"Makine Öğrenmesi\"\n",
+        "arananKelime = \"makine öğrenmesi\"\n",
+        "print(anahtarKelime.lower() == arananKelime)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UGf8jBClTHly",
+        "outputId": "1e235378-d101-432c-d600-90488999f051"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1781,7 +1870,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L1lvJBIVSzRK"
+        "id": "L1lvJBIVSzRK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89fa8d97-9846-49f0-db86-9acc6016d57a"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -1792,13 +1885,26 @@
         "print(\"Merhaba, ben %s!\" % adsoyad)\n",
         "print(\"Ben %d doğumluyum\" % dogumTarihi)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Merhaba, ben Orçun Madran!\n",
+            "Ben 1976 doğumluyum\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YEhvVmn0TAlx"
+        "id": "YEhvVmn0TAlx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "19d3a7f7-3161-47e7-e3eb-db0382251eb7"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -1808,8 +1914,16 @@
         "\n",
         "print(\"Merhaba, ben %s %s!\" % (ad, soyad))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Merhaba, ben Orçun Madran!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1823,17 +1937,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HxYY3XqGWYsi"
+        "id": "HxYY3XqGWYsi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8db04378-604c-4aae-c46c-25761e9a54ff"
       },
       "source": [
         "ad = \"Orçun\"\n",
         "soyad = \"Madran\"\n",
         "ders = \"Programlama Dilleri\"\n",
+        "print(\"Merhaba %s %s, bu dönemki dersiniz '%s'. Başarılar!\" % (ad, soyad,ders))\n",
         "\n",
         "# Çıktı: Merhaba Orçun Madran, bu dönemki dersiniz \"Programlama Dilleri\". Başarılar!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Merhaba Orçun Madran, bu dönemki dersiniz 'Programlama Dilleri'. Başarılar!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
