--- a/Python_101__mustafayildirim.ipynb
+++ b/Python_101__mustafayildirim.ipynb
@@ -1463,7 +1463,7 @@
         "metin = \"Python Programlama Dili\"\n",
         "print(metin[7:])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1547,7 +1547,7 @@
         "metin = \"Python Programlama Dili\"\n",
         "print(\"Python\" in metin)\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1701,7 +1701,7 @@
         "metin = 'Bilimsel çalışmalarda \"Python\" kullanımı Türkiye\\'de çok yaygınlaştı!'\n",
         "print(metin)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1762,7 +1762,7 @@
         "print(metin.upper())\n",
         "print(metin.capitalize())"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1798,7 +1798,7 @@
         "arananKelime = \"makine öğrenmesi\"\n",
         "print(anahtarKelime == arananKelime) # Çıktı: True"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1823,7 +1823,7 @@
         "id": "UGf8jBClTHly",
         "outputId": "1e235378-d101-432c-d600-90488999f051"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1885,7 +1885,7 @@
         "print(\"Merhaba, ben %s!\" % adsoyad)\n",
         "print(\"Ben %d doğumluyum\" % dogumTarihi)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1914,7 +1914,7 @@
         "\n",
         "print(\"Merhaba, ben %s %s!\" % (ad, soyad))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1951,7 +1951,7 @@
         "\n",
         "# Çıktı: Merhaba Orçun Madran, bu dönemki dersiniz \"Programlama Dilleri\". Başarılar!"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2012,7 +2012,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p1GRzMQkUgX0"
+        "id": "p1GRzMQkUgX0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "40e35c08-5d68-441b-a886-0bca85ee30e0"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2020,8 +2024,16 @@
         "acikListe = [\"Açık Bilim\", \"Açık Erişim\", \"Açık Veri\", \"Açık Eğitim\", \"Açık Kaynak\"]\n",
         "print(acikListe)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Açık Bilim', 'Açık Erişim', 'Açık Veri', 'Açık Eğitim', 'Açık Kaynak']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2035,13 +2047,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bVSMLdnLG7Kx"
+        "id": "bVSMLdnLG7Kx",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "0a362133-3083-4d08-b311-ecbc11ea5557"
       },
       "source": [
-        "acikListe = [\"Açık Bilim\", \"Açık Erişim\", \"Açık Veri\", \"Açık Eğitim\", \"Açık Kaynak\"]\n"
+        "acikListe = [\"Açık Bilim\", \"Açık Erişim\", \"Açık Veri\", \"Açık Eğitim\", \"Açık Kaynak\"]\n",
+        "acikListe[2]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Açık Veri'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2055,13 +2087,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_DgLPxODI3aP"
+        "id": "_DgLPxODI3aP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ff4d099c-c57d-498b-c5c4-b3fe24ac4f7d"
       },
       "source": [
-        "acikListe = [\"Açık Bilim\", \"Açık Erişim\", \"Açık Veri\", \"Açık Eğitim\", \"Açık Kaynak\"]\n"
+        "acikListe = [\"Açık Bilim\", \"Açık Erişim\", \"Açık Veri\", \"Açık Eğitim\", \"Açık Kaynak\"]\n",
+        "acikListe[3:]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Açık Eğitim', 'Açık Kaynak']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2100,7 +2148,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YlhpK0Y2VbBw"
+        "id": "YlhpK0Y2VbBw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ba302fa3-7f33-426d-b5f3-459882853820"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2117,8 +2169,19 @@
         "acikListe[4] = \"Açık Kaynak Kod\"\n",
         "print(acikListe)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Açık Bilim', 'Açık Erişim', 'Açık Veri', 'Açık Eğitim', 'Açık Kaynak']\n",
+            "['Açık Bilim', 'Açık Erişim', 'Açık Veri', 'Açık Eğitim', 'Açık Kaynak', 'Açık Donanım', 'Açık İnovasyon']\n",
+            "['Açık Bilim', 'Açık Erişim', 'Açık Veri', 'Açık Eğitim', 'Açık Kaynak', 'Açık Donanım', 'Açık İnovasyon', 'Açık Veri Gazeteciliği']\n",
+            "['Açık Bilim', 'Açık Erişim', 'Açık Veri', 'Açık Eğitim', 'Açık Kaynak Kod', 'Açık Donanım', 'Açık İnovasyon', 'Açık Veri Gazeteciliği']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2132,13 +2195,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_gzwR_UGLkL4"
+        "id": "_gzwR_UGLkL4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ec444845-f99f-46b5-b0b6-0a181da8a176"
       },
       "source": [
-        "#bilgiBilim\n"
+        "#bilgiBilim\n",
+        "bilgiBilim = [\"Tez\", \"Antitez\", \"Sosyal Bilimler\"]\n",
+        "print(bilgiBilim)\n",
+        "bilgiBilim +=[\"Fen Bilimleri\", \"Doktora\"]\n",
+        "print(bilgiBilim)\n",
+        "bilgiBilim[4] = \"Yüksek Lisans\"\n",
+        "print(bilgiBilim)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Tez', 'Antitez', 'Sosyal Bilimler']\n",
+            "['Tez', 'Antitez', 'Sosyal Bilimler', 'Fen Bilimleri', 'Doktora']\n",
+            "['Tez', 'Antitez', 'Sosyal Bilimler', 'Fen Bilimleri', 'Yüksek Lisans']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2185,7 +2268,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZTD-lZlkWPQZ"
+        "id": "ZTD-lZlkWPQZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f1566337-bb59-4675-97a1-e54e03b70640"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2202,8 +2289,19 @@
         "acikListe[:] = []\n",
         "print(acikListe)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Açık Bilim', 'Açık Erişim', 'Açık Veri', 'Açık Eğitim', 'Açık Kaynak']\n",
+            "['Açık Bilim', 'Açık Erişim', 'Açık İnovasyon', 'Açık Kaynak']\n",
+            "['Açık İnovasyon', 'Açık Kaynak']\n",
+            "[]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2217,13 +2315,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uQPbQgJAQ8nq"
+        "id": "uQPbQgJAQ8nq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "47feeaac-4bd7-46c9-c182-0f84efb944ee"
       },
       "source": [
-        "#bilgiBilim\n"
+        "#bilgiBilim\n",
+        "bilgiBilim = [\"Tez\", \"Antitez\", \"Sosyal Bilimler\", \"Fen Bilimleri\", \"Doktora\"]\n",
+        "print(bilgiBilim)\n",
+        "bilgiBilim[:1] = []\n",
+        "print(bilgiBilim)\n",
+        "bilgiBilim[:] = []\n",
+        "print(bilgiBilim)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Tez', 'Antitez', 'Sosyal Bilimler', 'Fen Bilimleri', 'Doktora']\n",
+            "['Antitez', 'Sosyal Bilimler', 'Fen Bilimleri', 'Doktora']\n",
+            "[]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2261,7 +2379,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XHSZ06qzWxmB"
+        "id": "XHSZ06qzWxmB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f1dfd45-12a8-430f-ed4c-811f0737eda1"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2269,8 +2391,16 @@
         "ulkeKodlari = (\"TR\", \"US\", \"EN\", \"JP\")\n",
         "print(ulkeKodlari)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('TR', 'US', 'EN', 'JP')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2287,7 +2417,8 @@
         "id": "p4i7BTX1Uv9S"
       },
       "source": [
-        "#konuBasliklari\n"
+        "#konuBasliklari\n",
+        "konuBasliklari = ()"
       ],
       "execution_count": null,
       "outputs": []
@@ -2326,7 +2457,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T1DFoRVIXJtN"
+        "id": "T1DFoRVIXJtN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "76977e86-f6fd-4eaf-c6c7-4643c989161e"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2340,8 +2475,18 @@
         "del adresDefteri [\"Ankara Üniversitesi\"]\n",
         "print(adresDefteri)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Hacettepe Üniversitesi': 'hacettepe.edu.tr', 'ODTÜ': 'odtu.edu.tr', 'Bilkent Üniversitesi': 'bilkent.edu.tr'}\n",
+            "{'Hacettepe Üniversitesi': 'hacettepe.edu.tr', 'ODTÜ': 'odtu.edu.tr', 'Bilkent Üniversitesi': 'bilkent.edu.tr', 'Ankara Üniversitesi': 'ankara.edu.tr'}\n",
+            "{'Hacettepe Üniversitesi': 'hacettepe.edu.tr', 'ODTÜ': 'odtu.edu.tr', 'Bilkent Üniversitesi': 'bilkent.edu.tr'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2395,7 +2540,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b07Mqre3XqoH"
+        "id": "b07Mqre3XqoH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3db5c73e-4316-4884-82ad-2b6f088766d3"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2407,8 +2556,18 @@
         "\n",
         "print(adresDefteri.keys())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Hacettepe Üniversitesi': 'hacettepe.edu.tr', 'ODTÜ': 'odtu.edu.tr', 'Bilkent Üniversitesi': 'bilkent.edu.tr'}\n",
+            "dict_values(['hacettepe.edu.tr', 'odtu.edu.tr', 'bilkent.edu.tr'])\n",
+            "dict_keys(['Hacettepe Üniversitesi', 'ODTÜ', 'Bilkent Üniversitesi'])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
