Colab kullanılarak oluşturuldu

--- a/sozlukIslemleri.ipynb
+++ b/sozlukIslemleri.ipynb
@@ -81,31 +81,35 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aCCe6CnMAS_K",
-        "outputId": "a7f3168a-b625-44f5-ee25-f6a1cb605b77"
+        "id": "aCCe6CnMAS_K"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{'Adalet Bakanlığı': 'ADB', 'Aile ve Sosyal Hizmetler Bakanlığı': 'ASHB', 'Çalışma ve Sosyal Güvenlik Bakanlığı': 'ÇSGB', 'Çevre Şehircilik ve İklim Değişikliği Bakanlığı': 'ÇŞİDB', 'Dışişleri Bakanlığı': 'DB', '\\tEnerji ve Tabii Kaynaklar Bakanlığı': 'ETKB', '\\tGençlik ve Spor Bakanlığı': 'GSB', 'Hazine ve Maliye Bakanlığı': 'HMB', 'İçişleri Bakanlığı': 'İB', 'Kültür ve Turizm Bakanlığı': 'KTB'}\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#Sözlükteki bir öğenin güncellenmesi\n",
         "print(bakanlikKisaltmalari)\n",
         "guncellenecek = int(input(\"Güncellemek istediğiniz bakanlığın sıra numarasını giriniz: \"))\n",
         "print(\"Güncellenecek bakanlık: \" + bakanlikKisaltmalari[guncellenecek-1])\n",
         "guncelBakanlik = input(\"Güncel bakanlık bilgisini giriniz: \")\n",
-        "konusanlar[guncellenecek-1] = guncelBakanlik\n",
+        "bakanlikKisaltmalari[guncellenecek-1] = guncelBakanlik\n",
         "print(\"Güncelleme tamamlandı\")\n",
         "print(bakanlikKisaltmalari)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sözlükte arama yapılması\n",
+        "print(bakanlikKisaltmalari)\n",
+        "arama = int(input(\"Arama için giriş yapınız: \"))\n",
+        "print(\"arama\" in bakanlikKisaltmalari)\n",
+        "print(\"Arama tamamlandı\")\n",
+        "print(bakanlikKisaltmalari)"
+      ],
+      "metadata": {
+        "id": "zg4lqMvth-tI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
